# jllt-edp-deltashare

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.claude/: AZURE_BLOB_LOGGING_GUIDE.md  AZURE_WEBAPP_CONFIG.md  BACKWARDS_COMPATIBILITY_FIX.md  CI_FIX_GUIDE.md  CLAUDE.md  DATABASE_LOGGING_GUIDE.md  DATABASE_TRACKING_AND_ROLLBACK.md  DEPLOYMENT_CHECKLIST.md  FIELD_UPDATES.md  FIXTURE_ORGANIZATION.md  HEALTH_CHECK_GUIDE.md  IMMEDIATE_FIX_SUMMARY.md  IP_MANAGEMENT_GUIDE.md  QUICK_START_BLOB_LOGGING.md  QUICK_START_DATABASE_LOGGING.md  README.md  README_LOGGING.md  SHAREPACK_LATEST_FEATURES.md  TESTING_QUICK_REFERENCE.md  TEST_SUITE_SUMMARY.md  TOKEN_CACHING_GUIDE.md  UPDATE_STRATEGY_GUIDE.md  V1_TO_V2_MIGRATION.md  WORKFLOW_CONFLICT_HANDLING.md  WORKFLOW_DATA_MODEL.md  WORKFLOW_IMPLEMENTATION_SUMMARY.md  WORKFLOW_MVP_PLAN.md  (+8 more)
api_layer/: .pre-commit-config.yaml  EXCEL_IP_FIELDS.md  FIELD_UPDATES.md  Makefile  README copy.md  README.md  SCHEDULE_CREATION_ADDED.md  SHAREPACK_V2_GUIDE.md  TARGET_ASSET_UPDATE.md  WORKFLOW_IMPLEMENTATION.md  WORKFLOW_NEXT_STEPS.md  WORKFLOW_SMART_STRATEGY.md  app.py  create_sample_excel.py  pyproject.toml  requirements.txt  run.sh  sample_sharepack.xlsx  sample_sharepack.xlsx.backup3  sample_sharepack.yaml  sample_sharepack_template_v2.md  sample_sharepack_v2.yaml  startup.sh
api_layer/apim_openapi/: openapi.json
api_layer/documentation/: DOCUMENTATION.md  PIPELINE_CLEANUP.md  agentic_mcp.md  datamodel.md  strategy_recommendation.md
api_layer/excel_template/: 01_metadata.csv  02_recipient.csv  03_share.csv  04_pipelines.csv  README.md  create_excel_template.py
api_layer/postman_collection/: COLLECTION_SUMMARY.md  Catalog_API.postman_collection.json  Health_API.postman_collection.json  Metrics_API.postman_collection.json  Pipelines_API.postman_collection.json  QUICK_START.md  README.md  Recipients_API.postman_collection.json  Schedule_API.postman_collection.json  Shares_API.postman_collection.json  Workflow_API.postman_collection.json
api_layer/scripts/: README.md  create_sample_excel.py  generate_openapi.py  regenerate_requirements.py
api_layer/sharepack_templates/: README.md  SHARE_ASSETS_EXPLICIT_APPROACH.md  sample_sharepack.xlsx  sample_sharepack.yaml  validate_excel.py  validate_yaml.py
api_layer/src/dbrx_api/: __init__.py  dependencies.py  errors.py  main.py  settings.py
api_layer/src/dbrx_api/dbrx_auth/: token_gen.py  token_manager.py
api_layer/src/dbrx_api/dltshr/: __init__.py  recipient.py  share.py
api_layer/src/dbrx_api/jobs/: __init__.py  dbrx_catalog.py  dbrx_pipelines.py  dbrx_schedule.py
api_layer/src/dbrx_api/metrics/: pipeline_metrics.py
api_layer/src/dbrx_api/monitoring/: __init__.py  azure_blob_handler.py  datadog_handler.py  logger.py  postgresql_handler.py  request_context.py
api_layer/src/dbrx_api/routes/: routes_catalog.py  routes_health.py  routes_metrics.py  routes_pipelines.py  routes_recipient.py  routes_schedule.py  routes_share.py  routes_workflow.py
api_layer/src/dbrx_api/schemas/: schemas.py  schemas_workflow.py
api_layer/src/dbrx_api/workflow/: __init__.py  enums.py
api_layer/src/dbrx_api/workflow/db/: migrations.py  pool.py  repository_ad_group.py  repository_audit.py  repository_base.py  repository_databricks_object.py  repository_metrics.py  repository_notification.py  repository_pipeline.py  repository_project.py  repository_recipient.py  repository_request.py  repository_share.py  repository_share_pack.py  repository_sync_job.py  repository_tenant.py  repository_user.py  scd2.py  schema.sql
api_layer/src/dbrx_api/workflow/models/: __init__.py  metrics.py  pipeline.py  project.py  recipient.py  request.py  share.py  share_pack.py  sync_entities.py  tenant.py
api_layer/src/dbrx_api/workflow/orchestrator/: __init__.py  db_persist.py  pipeline_cleanup.py  pipeline_flow.py  provisioning.py  provisioning_delete.py  provisioning_full.py  provisioning_stub.py  provisioning_update.py  recipient_flow.py  share_flow.py  status_tracker.py  update_handler.py
api_layer/src/dbrx_api/workflow/parsers/: __init__.py  excel_parser.py  parser_factory.py  yaml_parser.py
api_layer/src/dbrx_api/workflow/queue/: __init__.py  queue_client.py  queue_consumer.py
api_layer/src/dbrx_api/workflow/validators/: __init__.py  strategy_detector.py
api_layer/tests/: TESTING_STRATEGY.md  __init__.py  conftest.py  consts.py
api_layer/tests/fixtures/: app_fixtures.py  azure_fixtures.py  business_logic_fixtures.py  catalog_fixtures.py  databricks_fixtures.py  logging_fixtures.py  pipeline_fixtures.py  schedule_fixtures.py  workflow_fixtures.py
api_layer/tests/unit_tests/: __init__.py  test_data_pipelines.py  test_dbrx_pipelines.py  test_dependencies.py  test_dltshr_recipient.py  test_dltshr_share.py  test_errors.py  test_logging.py  test_routes_catalog.py  test_routes_health.py  test_routes_metrics.py  test_routes_pipelines.py  test_routes_recipient.py  test_routes_schedule.py  test_routes_share.py  test_routes_workflow.py  test_token_gen.py  test_token_manager.py
(+14 files in other folders)
