############################
# --- Package Settings --- #
############################

[project]
name = "jllt-edp-deltashare"
description = "This is a Python client library for the DeltaShare API."
authors = [{ name = "NitinKeshav", email = "nitinkeshav.bolla@jll.com" }]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi",
    "pydantic",
    "pydantic_settings",
    "python-dotenv",
    "typing-extensions",
    "loguru",
    "python-multipart",
]
classifiers = ["Programming Language :: Python :: 3"]
keywords = ["deltashare", "databricks", "api"]

# version will be derived dynamically from version.txt via setuptools
dynamic = ["version"]

# docs: https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
[tool.setuptools.dynamic]
version = { file = "api_layer/version.txt" }

# Package discovery for src/ layout
[tool.setuptools.packages.find]
where = ["api_layer/src"]

# optional dependencies can be installed with square brackets, e.g. `pip install my-package[test,static-code-qa]`
[project.optional-dependencies]
dbrx = ["databricks-sdk"]
api = ["uvicorn"]
azure = [
    "azure-storage-blob",
    "azure-identity",
    "asyncpg",
]
datadog = ["aiohttp"]
workflow = [
    "pyyaml>=6.0",
    "openpyxl>=3.1",
    "azure-storage-queue>=12.0",
    "asyncpg>=0.29",
    "httpx>=0.27",
]
test = [
    "jllt-edp-deltashare[dbrx]",
    "pytest",
    "pytest-cov",
    "httpx",
    "pytest-asyncio",
    "uvicorn",
    "python-multipart",
]
release = ["build", "twine"]
static-code-qa = [
    "pre-commit",
    "pylint",
    "black",
    "isort",
    "flake8",
    "flake8-docstrings",
    "Flake8-pyproject",
    "radon",
    "mypy",
    "types-requests",
]
# Installing dev dependencies in your virtual env makes it so that during development VS Code can
# - surface linting errors
# - automatically apply formatting
# - show enhanced autocompletion for stubs libraries
# See .vscode/settings.json to see how VS Code is configured to use these tools
dev = ["jllt-edp-deltashare[azure,dbrx,api,workflow,datadog,test,release,static-code-qa]"]

[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# include more than only .py files in the distribution package (wheel)
[tool.setuptools.package-data]
dbrx_api = ["*.json"]


##############################
# --- Code Quality Tools --- #
##############################

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
testpaths = ["api_layer/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore:on_event is deprecated:DeprecationWarning",
    "ignore:Support for class-based .* config.*:pydantic.PydanticDeprecatedSince20",
]
addopts = [
    "--verbose",
    "--cov=api_layer/src/dbrx_api",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=0",
]

[tool.coverage.run]
source = ["api_layer/src/dbrx_api"]
omit = ["*/tests/*", "*/__pycache__/*", "*/venv/*", "*/.venv/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "api_layer/htmlcov"

[tool.black]
line-length = 119
# regular expression ignoring multiple patterns separated by '|' and newlines
exclude = '''
/(
    \.venv
  | venv
  | api_layer/venv
)/
'''

[tool.flake8]
docstring-convention = "all"
ignore = ["D107", "D212", "E501", "W503", "W605", "D203", "D100"]
exclude = ["venv", "api_layer/venv"]
max-line-length = 119

# radon
radon-max-cc = 10

[tool.isort]
profile = "black"
multi_line_output = "VERTICAL_HANGING_INDENT"
force_grid_wrap = 2
line_length = 119
force_single_line = true
skip = ["venv", "api_layer/venv"]

[tool.pylint."messages control"]
disable = [
    "line-too-long",
    "trailing-whitespace",
    "missing-function-docstring",
    "consider-using-f-string",
    "import-error",
    "too-few-public-methods",
    "redefined-outer-name",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "tests", "scripts_notebooks", "api_layer/venv"]

[[tool.mypy.overrides]]
module = "databricks.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "azure.*"
ignore_missing_imports = true
